# Fractal

./: .gitignore  CMakeLists.txt  Fractal.sln  Fractal.zip.txt  README.md  device_test.bat
Fractal/: CommandArgsParser.cpp  Fractal.vcxproj  Fractal.vcxproj.filters  RgbLut.cpp  RgbLut.h  bmp.cpp  generateImage.cpp  generateImage.h  main.cpp
Fractal/include/: CommandArgsParser.h  Config.h  Image.h  ImageGenerator.h  Verbosity.h  Worker.h  bmp.h  generateImage.h
Fractal/src/: Config.cpp  ImageGenerator.cpp  Worker.cpp  bmp.cpp  generateImage.cpp  main.cpp
doc/: dynamic_vs_static  sources
test/: device_upload.sh  remote_build.sh  run_device.sh  run_pc.sh  run_server.sh  spam_local.sh  spam_server.sh  test_battery_device.sh  time.sh  vis.sh
